# sunomixer

./: .env.example  .gitignore  Makefile  README.md  SYSTEM_OVERVIEW.md  TECHNICAL_OVERVIEW.md  architecture.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default.yaml
docs/: PRD.md
src/suno_mixer/: __init__.py  __main__.py  cli.py  config.py  models.py  presets.py
src/suno_mixer/audio/: __init__.py  downloader.py  mixer.py  warmth.py
src/suno_mixer/metadata/: __init__.py  youtube.py
src/suno_mixer/pipeline/: __init__.py  orchestrator.py
src/suno_mixer/suno/: __init__.py  client.py
src/suno_mixer/thumbnail/: __init__.py  generator.py
src/suno_mixer/titles/: __init__.py  generator.py
src/suno_mixer/video/: __init__.py  composer.py
src/suno_mixer/youtube/: __init__.py  client.py
