[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suno-mixer"
version = "0.1.0"
description = "AI-powered YouTube mix automation using Suno API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Owain Lewis" }
]
keywords = ["suno", "ai", "music", "youtube", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydub>=0.25.1",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
suno-mixer = "suno_mixer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/suno_mixer"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]